# SSI2

./: CMakeLists.txt  README.md  inf2st_ns_psk_2025Z_kA_Sereda_Michał_zad_1  main.cpp
